# django-rest-template

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.test.yml  setup.cfg
src/: Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini
src/src/: celery.py  settings.py
