[tool.poetry]
name = "django-rest-template"
version = "0.1.0"
description = ""
authors = ["Murat Kamaletdinov <kamaletdinov2425@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^3.9.2"
pre-commit = "^2.17.0"


[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
